--- a/newIn.html
+++ b/newIn.html
@@ -21,6 +21,6 @@
   </div>
   <div id="score">Score: 0</div>
   <div id="timer">Time Left: 10</div>
-  <script src="Typing.js"></script>
+  <script src="newcript_1.js"></script>
 </body>
 </html>
