--- a/newindex.html
+++ b/newindex.html
@@ -25,6 +25,6 @@
   </div>
   <div id="score">Score: 0</div>
   <div id="timer">Time Left: 60</div>
-  <script src="Typing.js"></script>
+  <script src="newscript.js"></script>
 </body>
 </html>
