--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body{
-            background-color: aqua;
+            /* background-color: aqua; */
         }
         .body{
             /* background-color: blue; */
@@ -21,6 +21,12 @@
             width: 100%;
             padding: 10px;
         }
+        .correct {
+      color: green;
+    }
+    .incorrect {
+      color: red;
+    }
     </style>
 </head>
   <body>
@@ -30,21 +36,21 @@
                 <p>Type as many words as you can until time runs out!</p>
             </div>
         </div>
-        <div class="contrainer" style="background-color:green;">
+        <div class="contrainer">
             <div class="body" >
                 <button class="btn btn-outlinedark" id="start" style="width: 15%;height: auto; padding: 30px;" >start</button>
             </div>
             <div class="score-timer">
-                <div class="fs-1" id="score">score
+                <div class="fs-1" id="score">score 
                   <div>0</div>
                 </div>
                 <div class="fs-1" id="timer">timer
                   <div>0</div>
                 </div>
             </div>
-            <div class="text-center fs-1" id="word">wdosdo</div>
+            <div class="text-center fs-1" id="word"></div>
             <div class="text-center fs-1">
-              <input type="text" id="input" placeholder="Type here..." disabled>
+              
           </div>
         </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
