--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Typing</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body{
@@ -22,14 +22,31 @@
             padding: 10px;
         }
         .correct {
-      color: green;
-    }
-    .incorrect {
-      color: red;
-    }
+          color: green;
+        }
+        .incorrect {
+          color: red;
+        }
     </style>
 </head>
   <body>
+    <!-- <div class="modal" tabindex="-1">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <p>Modal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div> -->
         <div class="contrainer-fluid" style="display: flex; justify-content: center; background-color: red;">
             <div>
                 <h1>Typing a game</h1>
@@ -39,13 +56,14 @@
         <div class="contrainer">
             <div class="body" >
                 <button class="btn btn-outlinedark" id="start" style="width: 15%;height: auto; padding: 30px;" >start</button>
+                <button class="btn btn-outlinedark" id="reload" style="width: 15%;height: auto; padding: 30px; display: none;" >reload</button>
             </div>
             <div class="score-timer">
                 <div class="fs-1" id="score">score 
                   <div>0</div>
                 </div>
-                <div class="fs-1" id="timer">timer
-                  <div>0</div>
+                <div class="fs-1" id="timer">time
+                  <div>10</div>
                 </div>
             </div>
             <div class="text-center fs-1" id="word"></div>
