--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body{
-            /* background-color: aqua; */
+            background-color: rgb(172, 215, 240);
+            color: rgba(245, 247, 245, 0.897);
         }
         .body{
             /* background-color: blue; */
@@ -30,24 +31,7 @@
     </style>
 </head>
   <body>
-    <!-- <div class="modal" tabindex="-1">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title">Modal title</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          </div>
-          <div class="modal-body">
-            <p>Modal body text goes here.</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
-          </div>
-        </div>
-      </div>
-    </div> -->
-        <div class="contrainer-fluid" style="display: flex; justify-content: center; background-color: red;">
+        <div class="contrainer-fluid" style="display: flex; justify-content: center;">
             <div>
                 <h1>Typing a game</h1>
                 <p>Type as many words as you can until time runs out!</p>
@@ -55,14 +39,14 @@
         </div>
         <div class="contrainer">
             <div class="body" >
-                <button class="btn btn-outlinedark" id="start" style="width: 15%;height: auto; padding: 30px;" >start</button>
-                <button class="btn btn-outlinedark" id="reload" style="width: 15%;height: auto; padding: 30px; display: none;" >reload</button>
+                <button class="btn btn-dark" id="start" style="width: 15%;height: auto; padding: 30px;" >start</button>
+                <button class="btn btn-dark" id="reload" style="width: 15%;height: auto; padding: 30px; display: none;" >reload</button>
             </div>
             <div class="score-timer">
-                <div class="fs-1" id="score">score 
+                <div class="fs-1" id="score" style="color: green;">score 
                   <div>0</div>
                 </div>
-                <div class="fs-1" id="timer">time
+                <div class="fs-1" id="timer" style="color: green;">time
                   <div>10</div>
                 </div>
             </div>
