--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         .incorrect {
           color: red;
         }
+        .pointer{
+          border-bottom: 10px;
+        }
     </style>
 </head>
   <body>
